@startuml Paquete - Usuarios y Roles

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Paquete: Usuarios y Roles

' ============================================
' CLASES DEL PAQUETE
' ============================================

class Usuario {
  +idUsuario: int
  +nombre: string
  +apellido: string
  +dni: string
  +email: string
  +telefono: string
  +passwordHash: string
  +estado: string
  +idIe: int
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear(): Usuario
  +actualizar(): void
  +eliminar(): void
  +autenticar(dni: string, password: string): boolean
  +cambiarPassword(passwordActual: string, passwordNuevo: string): void
  +obtenerPorDni(dni: string): Usuario
  +obtenerRoles(): Rol[]
  +asignarRol(rol: Rol): void
  +activar(): void
  +desactivar(): void
}

class Rol {
  +idRol: int
  +nombre: string
  --
  +crear(): Rol
  +actualizar(): void
  +eliminar(): void
  +listarTodos(): Rol[]
  +obtenerUsuarios(): Usuario[]
}

class UsuarioRol {
  +idUsuario: int
  +idRol: int
  --
  +asignar(): void
  +remover(): void
  +verificarPermiso(): boolean
}

class Estudiante {
  +idEstudiante: int
  +idUsuario: int
  +idIe: int
  +idGradoSeccion: int
  +codigoQR: string
  +fechaNacimiento: DateTime
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear(): Estudiante
  +actualizar(): void
  +eliminar(): void
  +generarCodigoQR(): string
  +obtenerAsistencias(fechaInicio: DateTime, fechaFin: DateTime): Asistencia[]
  +obtenerApoderados(): Apoderado[]
  +obtenerJustificaciones(): Justificacion[]
  +obtenerRetiros(): Retiro[]
  +calcularPorcentajeAsistencia(): float
}

class Apoderado {
  +idApoderado: int
  +idUsuario: int
  +codigo: string
  +ocupacion: string
  +direccion: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear(): Apoderado
  +actualizar(): void
  +eliminar(): void
  +obtenerEstudiantes(): Estudiante[]
  +autorizarRetiro(estudiante: Estudiante): void
  +presentarJustificacion(justificacion: Justificacion): void
  +obtenerNotificaciones(): Notificacion[]
}

class Docente {
  +idDocente: int
  +idUsuario: int
  +codigo: string
  +especialidad: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +crear(): Docente
  +actualizar(): void
  +eliminar(): void
  +obtenerHorarios(): HorarioClase[]
  +registrarAsistencia(asistencia: Asistencia): void
  +reportarRetiro(retiro: Retiro): void
  +obtenerAulasAsignadas(): GradoSeccion[]
}

class EstudianteApoderado {
  +idEstudiante: int
  +idApoderado: int
  +relacion: string
  +esTitular: boolean
  +puedeRetirar: boolean
  --
  +asignar(): void
  +actualizar(): void
  +remover(): void
  +verificarAutorizacion(): boolean
}

' ============================================
' RELACIONES DEL PAQUETE
' ============================================

' Composición: Usuario contiene sus roles específicos (si se elimina usuario, se eliminan sus roles)
Usuario *-- Estudiante
Usuario *-- Apoderado
Usuario *-- Docente

' Asociación many-to-many con clase asociativa
Usuario -- UsuarioRol
Rol -- UsuarioRol

' Asociación many-to-many con clase asociativa
Estudiante -- EstudianteApoderado
Apoderado -- EstudianteApoderado

note right of Usuario
  **Usuario**
  Clase base que representa
  a cualquier usuario del sistema.
  Se especializa en Estudiante,
  Apoderado o Docente.
end note

note left of EstudianteApoderado
  **EstudianteApoderado**
  Clase asociativa que vincula
  estudiantes con sus apoderados,
  incluyendo el tipo de relación
  y permisos específicos.
end note

note bottom of Rol
  **Roles del sistema:**
  - Administrativo
  - Docente
  - Apoderado
  - Estudiante
  - Auxiliar
end note

@enduml
